--- a/app/views/user_tasks/index.html.erb
+++ b/app/views/user_tasks/index.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1>User Tasks</h1>
+<div id="task-form"></div>
 
 <table>
   <thead>
@@ -26,4 +27,4 @@
 
 <br>
 
-<%= link_to 'New User Task', new_user_task_path %>
+<%= link_to 'New User Task', new_user_task_path, remote: true %>
