--- a/app/views/user_tasks/_user_task.html.erb
+++ b/app/views/user_tasks/_user_task.html.erb
@@ -1,5 +1,6 @@
 <div class="well">
   <%= user_task.description %>
   <%= user_task.due %>
-  <%= link_to "Edit", edit_user_task_path(user_task), remote: true %>
+  <%= link_to "Edit task", edit_user_task_path(user_task), remote: true %>
+  <%= link_to "Complete task", user_task, remote: true, method: :delete, data: {confirm: "Are you sure?"} %>
 </div>
