--- a/app/views/user_tasks/_form.html.erb
+++ b/app/views/user_tasks/_form.html.erb
@@ -3,7 +3,7 @@
 
   <div class="form-inputs">
     <%= f.input :description %>
-    <%= f.input :due %>
+    <%= f.input :due, as: :string, placeholder: 'Today' %>
   </div>
 
   <div class="form-actions">
