Change some buttons

--- a/app/views/user_tasks/create.js.erb
+++ b/app/views/user_tasks/create.js.erb
@@ -3,3 +3,6 @@ $('#tasks')
 
 $('#task-form')
   .slideUp(350);
+
+$('.add-task').show(0)
+/*This shows the add button after it's hidden after clicking create*/
